# aliexpress-product-archiver

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
src/: archiver.rs  fetcher.rs  main.rs  models.rs  parser.rs
